...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="399dp"
        android:layout_height="55dp"
        android:hint="Enter answer here"
        android:textColor="#F7F2F2"
        android:textColorHint="#F7F2F2"
        android:textSize="15sp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809"></EditText>

    <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.853"
        tools:layout_editor_absoluteX="0dp"></Button>
...
