<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz"
    android:background="@drawable/wallpaper">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:text="@string/quiz"
        android:textColor="#F7F2F2"
        android:textSize="30sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/Question1"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:text="Assign a variable named name to John."
        android:textColor="#F7F2F2"
        android:textSize="9sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="392dp"
        android:layout_height="42dp"
        android:hint="Enter answer here"
        android:textColor="#F7F2F2"
        android:textColorHint="#F7F2F2"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Title"
        app:layout_constraintVertical_bias="0.242"></EditText>

    <TextView
        android:id="@+id/Question2"
        android:layout_width="347dp"
        android:layout_height="27dp"
        android:text="What symbol do you use to make a single line comment?"
        android:textColor="#F7F2F2"
        android:textSize="9sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="369dp"
        android:layout_height="46dp"
        android:hint="Enter answer here"
        android:textColor="#F7F2F2"
        android:textColorHint="#F7F2F2"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"></EditText>

    <TextView
        android:id="@+id/Question3"
        android:layout_width="337dp"
        android:layout_height="44dp"
        android:text="What symbol is used to compare two String variables for equality"
        android:textColor="#F7F2F2"
        android:textSize="9sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="377dp"
        android:layout_height="44dp"
        android:hint="Enter answer here"
        android:textColor="#F7F2F2"
        android:textColorHint="#F7F2F2"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628"></EditText>

    <TextView
        android:id="@+id/Question4"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:text="What conditional statement is used to specify many alternative blocks of code to be executed?"
        android:textColor="#F7F2F2"
        android:textSize="9sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="377dp"
        android:layout_height="42dp"
        android:hint="Enter answer here"
        android:textColor="#F7F2F2"
        android:textColorHint="#F7F2F2"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84"></EditText>

    <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.893"
        tools:layout_editor_absoluteX="8dp"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>